fixed a background image and the size of the line container on firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,7 +259,7 @@ h1, h2 {
   border-top: 25px solid #333333;
   border-bottom: 25px solid #333333;
   content: " ";
-  height: 750px;
+  height: 680px;
   margin: -40px 0px 0 -190px;
   position: absolute;
   width: 100%;
